<resources>
    <string name="app_name">Show Me The Money 2</string>
    <string name="categories_activity_label">Categories</string>

    <string name="category_filter_hint">Filter</string>

    <string name="amount_hint">Amount</string>
    <string name="comment_hint">Comment</string>

    <string name="saved">Saved</string>
    <string name="no_amount">No amount specified</string>
    <string name="wrong_amount">Amount is not a valid decimal</string>
    <string name="negative_or_zero_amount">Amount can not be negative or zero</string>

    <string name="from_date_after_to_date">From date can not be after to date</string>

    <string name="no_category">(No category)</string>

    <!--Stats activity-->
    <string name="stats_total">Total</string>
    <string name="stats_entries_per_day">Entries/day</string>
    <string name="stats_entries">Entries</string>
    <string name="stats_period">Period, days</string>
    <string name="stats_per_day">Per day</string>
    <string name="stats_per_week">Per week</string>
    <string name="stats_per_month">Per month</string>
    <string name="stats_per_year">Per year</string>

    <!--Settings screen-->
    <string name="settings_screen_caption">Settings</string>

    <string name="settings_category_keywords_caption">Categories keywords</string>
    <string name="settings_category_keywords_desc">Define keywords for categories - parsed sms spendings will be assigned a category according to them</string>

    <string name="settings_sms_go_words_caption">Sms go-words</string>
    <string name="settings_sms_go_words_desc">Sms with text containing any of specified words will be parsed</string>

    <string name="settings_sms_stop_words_caption">Sms stop-words</string>
    <string name="settings_sms_stop_words_desc">Sms with text containing any of specified words will not be parsed, even if it contains go-words</string>

    <string name="settings_sms_export_caption">Export</string>
    <string name="settings_sms_export_desc">Create a CSV file with all spendings</string>

    <string name="settings_sms_import_caption">Import</string>
    <string name="settings_sms_import_desc">Read and store spendings from a CSV file</string>

    <string name="settings_sms_edit_categories_caption">Edit categories</string>
    <string name="settings_sms_edit_categories_desc">Rename or delete categories</string>

    <string name="settings_sms_delete_spendings_caption">Delete spendings</string>
    <string name="settings_sms_delete_spendings_desc">Delete by range, category or all of them</string>

    <!--Words editing screen-->
    <string name="words_edit_caption_category_keywords">Keywords:</string>
    <string name="words_edit_caption_sms_go">Sms go-words</string>
    <string name="words_edit_caption_sms_stop">Sms stop-words</string>
    <string name="words_edit_add_hint">Add new</string>

    <string name="words_edit_exists">This word already exists in list</string>
    <string name="words_edit_keyword_bound_other_category">This keyword is already used for category</string>

    <string name="words_edit_confirm_delete">Delete the word?</string>


    <!--Confirm dialog-->
    <string name="dialog_confirm_ok">OK</string>
    <string name="dialog_confirm_cancel">Cancel</string>


    <!--Default categories-->
    <!--todo remove dev items-->
    <string-array name="initial_categories_array">
        <item>Food</item>
        <item>Cinema</item>
        <item>Electronics</item>
        <item>Household</item>
        <item>Internet</item>
        <item>Games</item>
        <item>Clothes</item>
        <item>Тестовая КАТЕГОРИЯ</item>
    </string-array>

    <!--Default sms parsing go-words-->
    <!--todo remove dev items-->
    <string-array name="initial_sms_parse_go_words">
        <item>test</item>

        <item>pokupka</item>
        <item>покупка</item>

        <item>platezh</item>
        <item>платеж</item>

        <item>oplata</item>
        <item>оплата</item>
    </string-array>

    <!--Default sms parsing stop-words-->
    <!--todo remove dev items-->
    <string-array name="initial_sms_parse_stop_words">
        <item>code</item>
        <item>cod</item>
        <item>kod</item>
        <item>код</item>

        <item>parol</item>
        <item>parol\'</item>
        <item>пароль</item>

        <item>sms-kod</item>
        <item>смс-код</item>

        <item>password</item>

        <item>ключ</item>
        <item>kluch</item>
    </string-array>

</resources>
