<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:id="@+id/amountShareView"
            android:background="@color/colorAccent"/>
    <View
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:id="@+id/amountShareOppositeView"
            />
</LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                tools:text="899 986.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTotal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginRight="@dimen/stats_totals_distance_from_border"
                android:layout_marginEnd="@dimen/stats_totals_distance_from_border"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/textViewCategory"
                android:layout_marginBottom="0dp"/>

        <TextView
                tools:text="Electronics category"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCategory"

                android:layout_marginStart="@dimen/stats_totals_distance_from_border"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="@dimen/stats_totals_distance_from_border"
                app:layout_constraintRight_toLeftOf="@+id/textViewTotal"
                android:layout_marginRight="8dp"/>


        <View
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:id="@+id/verticalDivider"
                android:background="@color/colorAccent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/labelPerDay"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="@+id/labelEntries"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/labelPerDay"
                android:layout_marginBottom="@dimen/stats_totals_distance_from_bottom"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/stats_per_day"
                android:layout_marginLeft="@dimen/stats_totals_distance_from_border"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="@dimen/stats_totals_text_size"
                android:layout_marginStart="@dimen/stats_totals_distance_from_border"/>

        <TextView
                tools:text="2345"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPerDay"
                app:layout_constraintBottom_toBottomOf="@+id/labelPerDay"
                app:layout_constraintRight_toLeftOf="@+id/verticalDivider"
                android:layout_marginRight="@dimen/stats_totals_distance_from_border"
                android:textSize="@dimen/stats_totals_text_size"
                android:layout_marginEnd="@dimen/stats_totals_distance_from_border"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelEntriesPerDay"
                android:layout_marginBottom="@dimen/stats_totals_distance_between_rows"
                app:layout_constraintBottom_toTopOf="@+id/labelPerDay"
                android:text="@string/stats_entries_per_day"
                app:layout_constraintLeft_toLeftOf="@+id/labelPerDay"
                android:textSize="@dimen/stats_totals_text_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelPerYear"
                app:layout_constraintBottom_toBottomOf="@+id/labelPerDay"
                app:layout_constraintLeft_toRightOf="@+id/verticalDivider"
                android:layout_marginLeft="@dimen/stats_totals_distance_from_border"
                android:text="@string/stats_per_year"
                android:textSize="@dimen/stats_totals_text_size"
                android:layout_marginStart="@dimen/stats_totals_distance_from_border"/>

        <TextView
                android:text="@string/stats_per_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelPerMonth"
                app:layout_constraintLeft_toLeftOf="@+id/labelPerYear"
                app:layout_constraintBottom_toBottomOf="@+id/labelEntriesPerDay"
                android:textSize="@dimen/stats_totals_text_size"/>

        <TextView
                android:text="@string/stats_entries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelEntries"
                app:layout_constraintLeft_toLeftOf="@+id/labelEntriesPerDay"
                android:layout_marginBottom="@dimen/stats_totals_distance_between_rows"
                app:layout_constraintBottom_toTopOf="@+id/labelEntriesPerDay"
                android:textSize="@dimen/stats_totals_text_size"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewCategory"/>

        <TextView
                android:text="@string/stats_per_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelPerWeek"
                app:layout_constraintLeft_toLeftOf="@+id/labelPerMonth"
                app:layout_constraintBottom_toBottomOf="@+id/labelEntries"
                android:textSize="@dimen/stats_totals_text_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPerYear"
                app:layout_constraintBottom_toBottomOf="@+id/labelPerYear"
                android:layout_marginRight="@dimen/stats_totals_distance_from_border"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="2456789.99"
                android:textSize="@dimen/stats_totals_text_size"
                android:layout_marginEnd="@dimen/stats_totals_distance_from_border"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPerMonth"
                app:layout_constraintRight_toRightOf="@+id/textViewPerYear"
                tools:text="2456789.99"
                app:layout_constraintBottom_toBottomOf="@+id/labelPerMonth"
                android:textSize="@dimen/stats_totals_text_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPerWeek"
                app:layout_constraintRight_toRightOf="@+id/textViewPerMonth"
                tools:text="2456789.99"
                app:layout_constraintBottom_toBottomOf="@+id/labelPerWeek"
                android:textSize="@dimen/stats_totals_text_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEntriesPerDay"
                tools:text="123.5"
                app:layout_constraintBottom_toBottomOf="@+id/labelEntriesPerDay"
                app:layout_constraintRight_toRightOf="@+id/textViewPerDay"
                android:textSize="@dimen/stats_totals_text_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEntries"
                tools:text="34567"
                app:layout_constraintBottom_toBottomOf="@+id/labelEntries"
                app:layout_constraintRight_toRightOf="@+id/textViewEntriesPerDay"
                android:textSize="@dimen/stats_totals_text_size"/>

    </android.support.constraint.ConstraintLayout>

    <!--TODO replace all android:src to app:srcCompat-->
</android.support.v7.widget.CardView>

