<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ru.thecop.smtm2.activity.StatsActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp"
            android:id="@+id/buttonLayout">

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        <Button
                style="@style/statsButton"
                android:onClick="loadToday"
                android:text="T"
                android:layout_marginBottom="4dp"
                android:id="@+id/buttonToday"/>

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        <Button
                style="@style/statsButton"
                android:onClick="loadYesterday"
                android:text="1"
                android:layout_marginBottom="4dp"
                android:id="@+id/buttonYesterday"/>

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        <Button
                style="@style/statsButton"
                android:onClick="loadWeek"
                android:text="7"
                android:layout_marginBottom="4dp"
                android:id="@+id/buttonWeek"/>

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        <Button
                style="@style/statsButton"
                android:onClick="load30Days"
                android:layout_marginBottom="4dp"
                android:text="30"
                android:id="@+id/buttonMonth"/>

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        <Button
                style="@style/statsButton"
                android:onClick="load365Days"
                android:text="365"
                android:layout_marginBottom="4dp"
                android:id="@+id/buttonYear"/>

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        <Button
                style="@style/statsButton"
                android:onClick="loadAll"
                android:text="All"
                android:layout_marginBottom="4dp"
                android:id="@+id/buttonAll"/>

        <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

    </LinearLayout>

    <TextView
            tools:text="30.08.2088"
            android:onClick="showFromDatePickerDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateFrom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginStart="24dp"/>

    <TextView
            tools:text="—"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateDash"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintRight_toLeftOf="@+id/textViewDateTo"
            app:layout_constraintLeft_toRightOf="@+id/textViewDateFrom"
            app:layout_constraintHorizontal_bias="0.521"/>

    <TextView
            tools:text="30.08.2088"
            android:onClick="showToDatePickerDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateTo"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginEnd="24dp"/>


    <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:id="@+id/horizontalDividerTop"
            android:background="@color/colorAccent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateFrom"
            app:layout_constraintHorizontal_bias="0.0"/>

    <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:id="@+id/verticalDivider"
            android:background="@color/colorAccent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/labelTotal"
            app:layout_constraintBottom_toBottomOf="@+id/labelPeriod"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/stats_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelTotal"
            app:layout_constraintLeft_toLeftOf="@+id/labelEntries"
            android:layout_marginBottom="@dimen/stats_totals_distance_between_rows"
            app:layout_constraintBottom_toTopOf="@+id/labelEntries"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
            android:id="@+id/labelPeriod"
            android:layout_marginBottom="@dimen/stats_totals_distance_from_bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/stats_period"
            android:layout_marginLeft="@dimen/stats_totals_distance_from_border"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="@dimen/stats_totals_text_size"
            android:layout_marginStart="@dimen/stats_totals_distance_from_border"/>

    <TextView
            tools:text="2345"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPeriod"
            app:layout_constraintBottom_toBottomOf="@+id/labelPeriod"
            app:layout_constraintRight_toLeftOf="@+id/verticalDivider"
            android:layout_marginRight="@dimen/stats_totals_distance_from_border"
            android:textSize="@dimen/stats_totals_text_size"
            android:layout_marginEnd="@dimen/stats_totals_distance_from_border"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelEntriesPerDay"
            android:layout_marginBottom="@dimen/stats_totals_distance_between_rows"
            app:layout_constraintBottom_toTopOf="@+id/labelPeriod"
            android:text="@string/stats_entries_per_day"
            app:layout_constraintLeft_toLeftOf="@+id/labelPeriod"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPerYear"
            app:layout_constraintBottom_toBottomOf="@+id/labelPeriod"
            app:layout_constraintLeft_toRightOf="@+id/verticalDivider"
            android:layout_marginLeft="@dimen/stats_totals_distance_from_border"
            android:text="@string/stats_per_year"
            android:textSize="@dimen/stats_totals_text_size"
            android:layout_marginStart="@dimen/stats_totals_distance_from_border"/>

    <TextView
            android:text="@string/stats_per_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPerMonth"
            app:layout_constraintLeft_toLeftOf="@+id/labelPerYear"
            app:layout_constraintBottom_toBottomOf="@+id/labelEntriesPerDay"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:text="@string/stats_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelEntries"
            app:layout_constraintLeft_toLeftOf="@+id/labelEntriesPerDay"
            android:layout_marginBottom="@dimen/stats_totals_distance_between_rows"
            app:layout_constraintBottom_toTopOf="@+id/labelEntriesPerDay"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:text="@string/stats_per_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPerWeek"
            app:layout_constraintLeft_toLeftOf="@+id/labelPerMonth"
            app:layout_constraintBottom_toBottomOf="@+id/labelEntries"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:text="@string/stats_per_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelPerDay"
            app:layout_constraintLeft_toLeftOf="@+id/labelPerWeek"
            app:layout_constraintBottom_toBottomOf="@+id/labelTotal"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPerYear"
            app:layout_constraintBottom_toBottomOf="@+id/labelPerYear"
            android:layout_marginRight="@dimen/stats_totals_distance_from_border"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="2456789.99"
            android:textSize="@dimen/stats_totals_text_size"
            android:layout_marginEnd="@dimen/stats_totals_distance_from_border"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPerMonth"
            app:layout_constraintRight_toRightOf="@+id/textViewPerYear"
            tools:text="2456789.99"
            app:layout_constraintBottom_toBottomOf="@+id/labelPerMonth"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPerWeek"
            app:layout_constraintRight_toRightOf="@+id/textViewPerMonth"
            tools:text="2456789.99"
            app:layout_constraintBottom_toBottomOf="@+id/labelPerWeek"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPerDay"
            app:layout_constraintRight_toRightOf="@+id/textViewPerWeek"
            tools:text="2456789.99"
            app:layout_constraintBottom_toBottomOf="@+id/labelPerDay"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEntriesPerDay"
            tools:text="123.5"
            app:layout_constraintBottom_toBottomOf="@+id/labelEntriesPerDay"
            app:layout_constraintRight_toRightOf="@+id/textViewPeriod"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEntries"
            tools:text="34567"
            app:layout_constraintBottom_toBottomOf="@+id/labelEntries"
            app:layout_constraintRight_toRightOf="@+id/textViewEntriesPerDay"
            android:textSize="@dimen/stats_totals_text_size"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTotal"
            tools:text="2456789.99"
            app:layout_constraintBottom_toBottomOf="@+id/labelTotal"
            app:layout_constraintRight_toRightOf="@+id/textViewEntries"
            android:textSize="@dimen/stats_totals_text_size"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/verticalDivider"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/horizontalDividerTop"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:id="@+id/recyclerView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>
